looking for bugs and testing on mobile

--- a/04addTaskStyle.css
+++ b/04addTaskStyle.css
@@ -342,6 +342,7 @@ input[type=date]:invalid::-webkit-datetime-edit {
   height: 16px;
   stroke: #ffffff;
   border-radius: 3px;
+  padding: 4px;
 }
 
 .checkbox-unchecked {
